--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -9,3 +9,6 @@ requires-python = ">=3.7"
 
 [project.urls]
 Homepage = "https://jasonyundt.website/gitweb?p=jasons-kickstart-compiler;a=summary"
+
+[project.scripts]
+jasons-kickstart-compiler = "jasons_kickstart_compiler:main"
