--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "jasons-kickstart-compiler"
 version = "0.0.0"
-requires-python = ">=3.7"
+requires-python = ">=3.7,<4"
 dependencies = ["Jinja2"]
 
 [project.urls]
